# vscode-vcpkg-template2

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: main.cpp
